--- a/public/index.html
+++ b/public/index.html
@@ -2,81 +2,89 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8"/>
-<meta name="viewport"
-      content="width=device-width,initial-scale=1.0,viewport-fit=cover"/>
+<meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover"/>
 <title>Triggui — Abre un libro físico. Aquí y ahora.</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap"
-      rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet"/>
 
 <style>
-/* ───────── RESET ───────── */
+/* ── RESET ── */
 *,*:before,*:after{margin:0;padding:0;box-sizing:border-box}
-html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff}
+html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff;-webkit-overflow-scrolling:touch}
 
-/* ───────── INTRO ───────── */
-.intro{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
-       padding:1.8rem 2.8rem;background:#191e32;border-radius:24px;z-index:120;
-       font-family:'Poppins';font-size:1rem;box-shadow:0 0 16px rgba(48,255,228,.32);
-       animation:introHide 2.2s 1s forwards}
-.intro .hl{color:#30ffe4;font-weight:800}
-@keyframes introHide{to{opacity:0;visibility:hidden;transform:translate(-50%,-80%)}}
+/* ── INTRO (“¿Qué sientes?”) ── */
+.intro{
+  position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
+  padding:1.8rem 2.8rem;background:#191e32;border-radius:24px;
+  font-family:'Poppins';font-size:1.1rem;font-weight:600;text-align:center;
+  box-shadow:0 0 16px rgba(48,255,228,.32);z-index:120;
+  animation:introHide 2.2s 1.2s forwards
+}
+@keyframes introHide{to{opacity:0;visibility:hidden;transform:translate(-50%,-82%)}}
 
-/* ───────── GRID ───────── */
+/* ── GRID ── */
 .grid{position:absolute;inset:5vh 1.5vw;display:grid;gap:1vw}
 @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
 @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
 
-/* ───────── BLOCKS ───────── */
-.block{position:relative;display:flex;align-items:center;justify-content:center;
-       padding:1rem;border-radius:22px;cursor:pointer;
-       background-size:320% 320%;transition:background-position 4s;overflow:hidden}
+/* ── BLOCKS ── */
+.block{
+  position:relative;display:flex;align-items:center;justify-content:center;
+  padding:1rem;border-radius:22px;cursor:pointer;
+  background-size:320% 320%;transition:background-position 4s;overflow:hidden
+}
 .block:hover{background-position:100% 100%}
-.block::before{content:"";position:absolute;inset:0;border-radius:inherit;
-               background:linear-gradient(180deg,rgba(255,255,255,.18),transparent 65%);
-               mix-blend-mode:overlay}
-.label{z-index:2;text-align:center;font-weight:700}
-.frase{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
-       padding:1rem;text-align:center;opacity:0;transition:opacity .25s}
+.block::before{
+  content:"";position:absolute;inset:0;border-radius:inherit;
+  background:linear-gradient(180deg,rgba(255,255,255,.18),transparent 65%);
+  mix-blend-mode:overlay
+}
+.label{z-index:2;font-weight:700;text-align:center}
+.frase{
+  position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
+  padding:1rem;text-align:center;font-size:1.05rem;opacity:0;transition:opacity .25s
+}
 .block.show .label{opacity:0}.block.show .frase{opacity:1}
 
-/* ───────── AURA ───────── */
+/* ── AURA ── */
 @keyframes aura{0%{transform:scale(.3);opacity:.8}100%{transform:scale(1.4);opacity:0}}
-.reveal-aura::after{content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none;
-                    background:var(--aura);animation:aura .6s ease-out forwards}
+.reveal-aura::after{
+  content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none;
+  background:var(--aura);animation:aura .6s ease-out forwards
+}
 @media(prefers-reduced-motion:reduce){.reveal-aura::after{animation:none;opacity:0}}
 
-/* ───────── PORTADA GENÉRICA ───────── */
-.fake-cover{
-  width:72%;aspect-ratio:3/4;border-radius:14px;
-  display:flex;flex-direction:column;align-items:center;justify-content:center;
-  padding:1.1rem .9rem;text-align:center;
-  box-shadow:0 8px 24px rgba(0,0,0,.45);
+/* ── PORTADA ── */
+.portada{
+  position:absolute;inset:0;display:none;flex-direction:column;align-items:center;
+  justify-content:center;padding:1rem;gap:.9rem;text-align:center;
+  animation:pop .55s ease-out forwards
 }
-.fake-cover h2{
-  font-size:clamp(1.3rem,4.8vw,2.1rem);font-weight:800;line-height:1.15;
-  word-break:break-word;color:#fff
-}
-.fake-cover p{
-  font-size:clamp(.75rem,2.3vw,1rem);margin-top:.6rem;color:#fff;opacity:.9
-}
-
-/* ───────── PORTADA CON IMAGEN ───────── */
-.portada{position:absolute;inset:0;display:none;flex-direction:column;align-items:center;
-         justify-content:center;padding:1rem;gap:1rem;text-align:center;animation:pop .55s ease-out forwards}
 @keyframes pop{0%{transform:scale(.8);opacity:0}100%{transform:scale(1);opacity:1}}
-.portada img{max-width:88%;max-height:65%;border-radius:18px;box-shadow:0 12px 32px rgba(0,0,0,.55)}
-.emoji{font-size:clamp(2.3rem,7vw,4rem);filter:drop-shadow(0 4px 8px rgba(0,0,0,.35));
-       animation:bounce .5s cubic-bezier(.34,1.56,.64,1)}
+.emoji{
+  font-size:clamp(2.3rem,7vw,4rem);
+  filter:drop-shadow(0 4px 8px rgba(0,0,0,.35));
+  animation:bounce .5s cubic-bezier(.34,1.56,.64,1)
+}
 @keyframes bounce{0%{transform:scale(.6) rotate(-6deg)}60%{transform:scale(1.15) rotate(6deg)}100%{transform:scale(1) rotate(0)}}
+.portada h2{
+  font-size:clamp(1.5rem,5vw,2.7rem);font-weight:800;line-height:1.15;
+  max-width:88%;margin-inline:auto;color:#fff;text-shadow:0 1px 3px rgba(0,0,0,.25)
+}
+.portada p{font-size:clamp(.8rem,2.4vw,1.1rem);font-weight:600;opacity:.9}
 
-/* ───────── CTA ───────── */
-.cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);
-     display:none;gap:1rem;z-index:100}
-.cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.9rem;font-weight:700;cursor:pointer}
-#otro{background:#ffd1d1;color:#000}#fisico{background:#d1ffd9;color:#000}
+/* ── CTA ── */
+.cta{
+  position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);
+  display:none;gap:1rem;z-index:100
+}
+.cta button{
+  border:none;padding:.6rem 1.2rem;border-radius:999px;
+  font-size:.9rem;font-weight:700;cursor:pointer
+}
+#otro{background:#ffd1d1;color:#000}
+#fisico{background:#d1ffd9;color:#000}
 
-/* ───────── CELE ───────── */
+/* ── CELE ── */
 .cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;align-items:center;justify-content:center;z-index:110}
 .cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;background:rgba(255,255,255,.05);padding:2rem 3rem;border-radius:20px}
 .num{color:#30ffe4;font-weight:900;font-size:2.8rem}
@@ -84,7 +92,7 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 </head>
 <body>
 
-<div class="intro"><span class="hl">Elige una palabra.</span> Detente un segundo.</div>
+<div class="intro">¿Qué sientes?</div>
 <div class="grid" id="grid"></div>
 
 <div class="cta" id="cta">
@@ -95,47 +103,55 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 <div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
 
 <script>
-/* ───── refs ───── */
-const grid = document.getElementById("grid"), cta = document.getElementById("cta"),
-      btnNew = document.getElementById("otro"), btnPhy = document.getElementById("fisico"),
-      cele = document.getElementById("cele"), celeMsg = document.getElementById("celeMsg");
+/* ── references ── */
+const grid = document.getElementById("grid"),
+      cta  = document.getElementById("cta"),
+      btnNew = document.getElementById("otro"),
+      btnPhy = document.getElementById("fisico"),
+      cele = document.getElementById("cele"),
+      celeMsg = document.getElementById("celeMsg");
 
-/* ───── globals ───── */
+/* ── globals ── */
 let libro=null, revealed=false;
-const portIdx=Math.floor(Math.random()*4);
-const emojis=["🌊","🛡️","🧠","✨","📘","🔮","❤️","🪞"];
-const isURL=s=>/^https?:\/\//i.test(s||"");
-const grad=i=>`linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
+const portIdx = Math.random()*4|0;
+const emojis  = ["🌊","🛡️","🧠","✨","📘","🔮","❤️","🪞"];
+const isURL   = s=>/^https?:\/\//i.test(s||"");
+const grad    = i => `linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
+
+/* ── ajuste dinámico del título ── */
+function fitTitle(h2){
+  const box = h2.parentElement,
+        MAX_H = 120, MIN_SCALE = .4;
+  let scale = Math.min(
+    box.clientWidth /(h2.scrollWidth+1),
+    MAX_H           /(h2.scrollHeight+1),
+    1
+  );
+  if(scale < MIN_SCALE){ scale = MIN_SCALE; }
+  h2.style.transform = `scale(${scale})`;
+  h2.style.transformOrigin = 'top center';
+}
 
 /* ── portada builder ── */
 function buildPort(i){
-  const wrap=document.createElement("div");wrap.className="portada";
-  /* emoji */
-  const e=document.createElement("div");e.className="emoji";e.textContent=emojis[i%emojis.length];
-  wrap.append(e);
+  const wrap = document.createElement("div");wrap.className="portada";
+  const emoji = document.createElement("div");emoji.className="emoji";emoji.textContent=emojis[i%emojis.length];
+  wrap.append(emoji);
 
-  /* si hay imagen real */
+  /* imagen real */
   if(isURL(libro.portada)){
     const img=new Image();img.src=libro.portada;img.loading="lazy";
     wrap.append(img);
-
-    const p=document.createElement("p");p.textContent=libro.autor;p.style.fontSize="clamp(.8rem,2.4vw,1.1rem)";p.style.opacity=".88";
-    wrap.append(p);
-    return wrap;
   }
 
-  /* --------- portada sintética --------- */
-  const cover=document.createElement("div");cover.className="fake-cover";
-  cover.style.background=`linear-gradient(135deg,${libro.colores[0]},${libro.colores[1]})`;
-
+  /* título + autor */
   const h2=document.createElement("h2");h2.textContent=libro.titulo;
   const p=document.createElement("p");p.textContent=libro.autor;
-
-  cover.append(h2,p);wrap.append(cover);
+  wrap.append(h2,p);fitTitle(h2);
   return wrap;
 }
 
-/* ── render 4 bloques ── */
+/* ── render ── */
 function render(){
   grid.innerHTML="";
   for(let i=0;i<4;i++){
@@ -143,23 +159,24 @@ function render(){
     const label=document.createElement("div");label.className="label";label.textContent=`${emojis[i]} ${libro.palabras[i]}`;
     const frase=document.createElement("div");frase.className="frase";frase.textContent=libro.frases[i];
     const port=buildPort(i);
-    if(i===portIdx)card.append(port);
+    if(i===portIdx) card.append(port);
     card.append(label,frase);
-    card.onclick=()=>click(card,i,port,label);
+    card.onclick=()=>handleClick(card,i,port,label);
     grid.append(card);
   }
 }
 
 /* ── click logic ── */
-function click(card,i,port,label){
-  if(revealed&&i!==portIdx){location.reload();return;}
-  if(i===portIdx&&!revealed){
+function handleClick(card,i,port,label){
+  if(revealed && i!==portIdx){location.reload();return;}
+  if(i===portIdx && !revealed){
     label.style.display="none";
     port.style.display="flex";
-    card.classList.add("reveal-aura");card.style.setProperty("--aura",libro.colores[i]);
+    card.classList.add("reveal-aura");
+    card.style.setProperty("--aura",libro.colores[i]);
     [...grid.children].forEach((c,j)=>{if(j!==portIdx)c.classList.add("show");});
     cta.style.display="flex";revealed=true;
-  }else if(i!==portIdx&&!revealed){
+  }else if(i!==portIdx && !revealed){
     card.classList.toggle("show");
   }
 }
@@ -177,14 +194,15 @@ btnPhy.onclick=async()=>{
   setTimeout(()=>{cele.style.display="none";cta.style.display="flex";btnPhy.disabled=false;},2300);
 };
 
-/* ── fetch data ── */
+/* ── data ── */
 (async()=>{
   try{
     const r=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now());
-    const data=await r.json();
-    libro=data.libros[Math.floor(Math.random()*data.libros.length)];
+    libro=(await r.json()).libros[Math.random()*4|0];
     render();
-  }catch(e){alert("No se pudo cargar Triggui.");console.error(e);}
+  }catch(e){
+    alert("No se pudo cargar Triggui.");console.error(e);
+  }
 })();
 </script>
 </body>
