--- a/public/index.html
+++ b/public/index.html
@@ -3,48 +3,53 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover"/>
-<title>Triggui — Abre un libro físico. Aquí y ahora.</title>
-<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet"/>
+<title>Triggui — Abre un libro físico</title>
+<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet"/>
 <style>
-/* RESET & CORE */
+/* ─── RESET & CORE ─── */
 *,*:before,*:after{margin:0;padding:0;box-sizing:border-box}
-html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff;overscroll-behavior:none}
-.intro{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
-       padding:1.8rem 2.8rem;background:#191e32;border-radius:24px;font-family:'Poppins';
-       font-size:1.15rem;font-weight:600;box-shadow:0 0 16px #30ffe544;z-index:120;
-       animation:introHide 2.3s 1s forwards}
-@keyframes introHide{to{opacity:0;visibility:hidden;transform:translate(-50%,-88%)}}
+html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff}
 
-/* GRID */
+/* ─── INTRO ─── */
+.intro{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;
+       font-weight:700;font-size:1.2rem;z-index:5;background:#0e0f1b;animation:fade 2.2s 1s forwards}
+@keyframes fade{to{opacity:0;visibility:hidden}}
+
+/* ─── GRID ─── */
 .grid{position:absolute;inset:5vh 1.5vw;display:grid;gap:1vw}
-@media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
 @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
+@media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
 
-/* BLOCKS */
+/* ─── BLOCKS ─── */
 .block{position:relative;display:flex;align-items:center;justify-content:center;
        padding:1rem;border-radius:22px;cursor:pointer;background-size:320% 320%;
        transition:background-position 4s}
 .block:hover{background-position:100% 100%}
-.label{z-index:2;font:700 1rem/1 'Archivo',sans-serif;text-align:center}
+.label{z-index:2;font:700 1.05rem/1 'Archivo',sans-serif;text-align:center;pointer-events:none}
 .frase{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
        padding:1rem;text-align:center;font-size:1.15rem;opacity:0;transition:.25s}
 .block.show .label{opacity:0}.block.show .frase{opacity:1}
 
-/* PORTADA */
-.portada{position:absolute;inset:0;display:none;flex-direction:column;align-items:center;
-         justify-content:center;gap:.65rem;padding:1rem;text-align:center}
+/* ─── PORTADA ─── */
+.portada{position:absolute;inset:0;display:none;flex-direction:column;align-items:center;justify-content:center;
+         gap:.7rem;padding:1rem;text-align:center}
 .emoji{font-size:clamp(2.3rem,7vw,4rem);filter:drop-shadow(0 4px 8px #0004)}
-.port-titulo{font-weight:800;line-height:1.15;max-width:88%;margin:0 auto}
-.port-autor {font-weight:600;opacity:.9}
-@media(min-width:600px){.frase{font-size:1rem}}   /* desktop: frases un poco menores */
-
-/* CTA & CELE idénticos a versiones previas */
-.cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);display:none;gap:1rem;z-index:100}
-.cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.9rem;font-weight:700;cursor:pointer}
-#otro{background:#ffd1d1;color:#000}#fisico{background:#d1ffd9;color:#000}
-.cele{position:fixed;inset:0;background:#000e;display:none;align-items:center;justify-content:center;z-index:110}
-.cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;background:#fff2;padding:2rem 3rem;border-radius:20px}
-.num{color:#30ffe4;font-weight:900;font-size:2.8rem}
+.title{
+  font-weight:800;
+  font-size:clamp(1.8rem,6vw,2.8rem);
+  max-width:90%;
+  line-height:1.15;
+  display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;
+  word-break:break-word
+}
+.author{
+  font-size:65%;
+  font-weight:600;
+  opacity:.88;
+  line-height:1.2;
+  display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;
+  word-break:break-word
+}
 </style>
 </head>
 <body>
@@ -52,53 +57,36 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 <div class="intro">¿Qué sientes?</div>
 <div id="grid" class="grid"></div>
 
-<div id="cta" class="cta">
-  <button id="otro">🎲 Otro digital</button>
-  <button id="fisico">📖 Abrí uno físico</button>
-</div>
-
-<div id="cele" class="cele"><div id="celeMsg" class="cele-msg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
-
 <script>
-/* UTIL */
-const $ = s => document.querySelector(s);
-const grid=$('#grid'),cta=$('#cta'),btnNew=$('#otro'),btnPhy=$('#fisico'),cele=$('#cele'),celeMsg=$('#celeMsg');
-const emojis=["🌊","🛡️","🧠","✨","📘","🔮","❤️","🪞"];
-let libro=null, revealed=false, portIdx=Math.floor(Math.random()*4);
+/* helpers */
+const $ = q=>document.querySelector(q);
+const emojis=["🌊","🛡️","🧠","✨"];
+let libro=null,revealed=false,portIdx=Math.floor(Math.random()*4);
+
+/* fetch contenido */
+(async()=>{
+ try{
+   const {libros}=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now()).then(r=>r.json());
+   libro=libros[Math.floor(Math.random()*libros.length)];
+   render();
+ }catch(e){alert("No se pudo cargar Triggui");console.error(e);}
+})();
+
+/* gradiente por bloque */
 const grad=i=>`linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
 
-/* Ajuste puntual de tamaños */
-function tuneFonts(titleEl,authorEl){
-  const box=titleEl.parentElement,getW=()=>box.clientWidth*0.92;
-  let fs=window.innerWidth<600?48:60;           // px upper bound
-  const min= window.innerWidth<600?28:34;       // px lower bound
-  titleEl.style.whiteSpace="nowrap";
-  while(fs>=min){
-    titleEl.style.fontSize=fs+'px';
-    if(titleEl.scrollWidth<=getW()){break;}
-    fs-=2;
-  }
-  if(fs<min){                                   // fallback: permite dos líneas
-    titleEl.style.whiteSpace="normal";
-    titleEl.style.fontSize=min+'px';
-  }
-  authorEl.style.fontSize=Math.round(fs*0.65)+'px';
-}
-
-/* Build portada */
+/* portada builder */
 function buildPort(i){
-  const wrap=document.createElement('div');wrap.className='portada';
-  wrap.innerHTML=`<div class="emoji">${emojis[i]}</div>
-                  <div class="port-txt"><h2 class="port-titulo"></h2><p class="port-autor"></p></div>`;
-  const h2=wrap.querySelector('.port-titulo'), p=wrap.querySelector('.port-autor');
-  h2.textContent=libro.titulo; p.textContent=libro.autor;
-  tuneFonts(h2,p);
-  return wrap;
+  const d=document.createElement("div");d.className="portada";
+  d.innerHTML=`<div class="emoji">${emojis[i%emojis.length]}</div>
+               <h2 class="title">${libro.titulo}</h2>
+               <p class="author">${libro.autor}</p>`;
+  return d;
 }
 
-/* Render blocks */
+/* render 4 bloques */
 function render(){
-  grid.innerHTML='';
+  const grid=$('#grid');grid.innerHTML='';
   for(let i=0;i<4;i++){
     const card=document.createElement('div');card.className='block';card.style.background=grad(i);
     const label=document.createElement('div');label.className='label';label.textContent=`${emojis[i]} ${libro.palabras[i]}`;
@@ -106,42 +94,10 @@ function render(){
     const port=buildPort(i);
     if(i===portIdx)card.append(port);
     card.append(label,frase);
-    card.onclick=()=>handleClick(card,i,port,label);
+    card.onclick=()=>{if(!revealed){card.classList.add('show');port.style.display='flex';revealed=true;}};
     grid.append(card);
   }
 }
-
-/* Interaction */
-function handleClick(card,i,port,label){
-  if(revealed && i!==portIdx){location.reload();return;}
-  if(i===portIdx && !revealed){
-    label.style.display='none';port.style.display='flex';
-    card.style.setProperty('--aura',libro.colores[i]);card.classList.add('reveal-aura');
-    [...grid.children].forEach((c,j)=>{if(j!==portIdx)c.classList.add('show');});
-    cta.style.display='flex';revealed=true;
-  }else if(i!==portIdx && !revealed){card.classList.toggle('show');}
-}
-
-/* Buttons */
-btnNew.onclick=()=>location.reload();
-btnPhy.onclick=async()=>{
-  btnPhy.disabled=true;cele.style.display='flex';
-  celeMsg.innerHTML='✨ <span class="num">...</span><br>libros físicos abiertos';
-  try{
-    const {total}=await fetch('https://triggui-api.vercel.app/api/increment').then(r=>r.json());
-    celeMsg.innerHTML=`✨ <span class="num">${total.toLocaleString('es-MX')}</span><br>libros físicos abiertos`;
-  }catch{celeMsg.textContent='📚 Error al contar libros';}
-  setTimeout(()=>{cele.style.display='none';cta.style.display='flex';btnPhy.disabled=false;},2300);
-};
-
-/* Fetch content */
-(async()=>{
-  try{
-    const data=await fetch('https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts='+Date.now()).then(r=>r.json());
-    libro=data.libros[Math.floor(Math.random()*data.libros.length)];
-    render();
-  }catch(e){alert('No se pudo cargar Triggui.');console.error(e);}
-})();
 </script>
 </body>
 </html>
