--- a/public/index.html
+++ b/public/index.html
@@ -5,99 +5,154 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover"/>
 <title>Triggui — Abre un libro físico</title>
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet"/>
+
 <style>
-/* ─── RESET & CORE ─── */
+/* RESET & CORE */
 *,*:before,*:after{margin:0;padding:0;box-sizing:border-box}
 html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff}
 
-/* ─── INTRO ─── */
+/* INTRO */
 .intro{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;
-       font-weight:700;font-size:1.2rem;z-index:5;background:#0e0f1b;animation:fade 2.2s 1s forwards}
+       font-weight:700;font-size:1.25rem;z-index:10;background:#0e0f1b;
+       animation:fade 2.4s 1.1s forwards}
 @keyframes fade{to{opacity:0;visibility:hidden}}
 
-/* ─── GRID ─── */
+/* GRID */
 .grid{position:absolute;inset:5vh 1.5vw;display:grid;gap:1vw}
 @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
 @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
 
-/* ─── BLOCKS ─── */
+/* BLOCKS */
 .block{position:relative;display:flex;align-items:center;justify-content:center;
-       padding:1rem;border-radius:22px;cursor:pointer;background-size:320% 320%;
-       transition:background-position 4s}
+       padding:1rem;border-radius:22px;cursor:pointer;
+       background-size:320% 320%;transition:background-position 4s}
 .block:hover{background-position:100% 100%}
-.label{z-index:2;font:700 1.05rem/1 'Archivo',sans-serif;text-align:center;pointer-events:none}
+.label{z-index:2;font:700 1.05rem/1 'Archivo';text-align:center}
 .frase{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
        padding:1rem;text-align:center;font-size:1.15rem;opacity:0;transition:.25s}
 .block.show .label{opacity:0}.block.show .frase{opacity:1}
 
-/* ─── PORTADA ─── */
-.portada{position:absolute;inset:0;display:none;flex-direction:column;align-items:center;justify-content:center;
-         gap:.7rem;padding:1rem;text-align:center}
-.emoji{font-size:clamp(2.3rem,7vw,4rem);filter:drop-shadow(0 4px 8px #0004)}
+/* PORTADA */
+.portada{position:absolute;inset:0;display:none;flex-direction:column;align-items:center;
+         justify-content:center;gap:.75rem;padding:1rem;text-align:center;animation:pop .55s ease-out forwards}
+@keyframes pop{0%{transform:scale(.8);opacity:0}100%{transform:scale(1);opacity:1}}
+.emoji{font-size:clamp(2.4rem,7vw,4rem);filter:drop-shadow(0 4px 8px #0006)}
 .title{
   font-weight:800;
-  font-size:clamp(1.8rem,6vw,2.8rem);
-  max-width:90%;
-  line-height:1.15;
+  font-size:clamp(1.9rem,6vw,3rem);
+  max-width:90%;line-height:1.15;
   display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;
   word-break:break-word
 }
 .author{
-  font-size:65%;
-  font-weight:600;
-  opacity:.88;
-  line-height:1.2;
+  font-size:65%;font-weight:600;opacity:.88;line-height:1.2;
   display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;
   word-break:break-word
 }
+
+/* HALO */
+@keyframes aura{0%{transform:scale(.3);opacity:.8}100%{transform:scale(1.4);opacity:0}}
+.reveal::after{content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none;
+               background:var(--aura);animation:aura .6s ease-out forwards}
+@media(prefers-reduced-motion:reduce){.reveal::after{animation:none;opacity:0}}
+
+/* CTA */
+.cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);
+     display:none;gap:1rem;z-index:20}
+.cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.9rem;font-weight:700;cursor:pointer}
+#otro{background:#ffd1d1;color:#000}#fisico{background:#d1ffd9;color:#000}
+
+/* CELE */
+.cele{position:fixed;inset:0;background:#000e;display:none;align-items:center;justify-content:center;z-index:25}
+.cele-msg{font-family:'Archivo';font-size:2rem;text-align:center;background:#fff2;padding:2rem 3rem;border-radius:20px}
+.num{color:#30ffe4;font-weight:900;font-size:2.8rem}
 </style>
 </head>
 <body>
 
 <div class="intro">¿Qué sientes?</div>
+
 <div id="grid" class="grid"></div>
 
+<div id="cta" class="cta">
+  <button id="otro">🎲 Otro digital</button>
+  <button id="fisico">📖 Abrí uno físico</button>
+</div>
+
+<div id="cele" class="cele"><div id="celeMsg" class="cele-msg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
+
 <script>
-/* helpers */
-const $ = q=>document.querySelector(q);
+const $=q=>document.querySelector(q);
+const grid=$('#grid'),cta=$('#cta'),btnNew=$('#otro'),btnPhy=$('#fisico'),cele=$('#cele'),celeMsg=$('#celeMsg');
+
 const emojis=["🌊","🛡️","🧠","✨"];
 let libro=null,revealed=false,portIdx=Math.floor(Math.random()*4);
 
-/* fetch contenido */
+/* === LOAD DATA === */
 (async()=>{
- try{
-   const {libros}=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now()).then(r=>r.json());
-   libro=libros[Math.floor(Math.random()*libros.length)];
-   render();
- }catch(e){alert("No se pudo cargar Triggui");console.error(e);}
+  try{
+    const {libros}=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now()).then(r=>r.json());
+    libro=libros[Math.floor(Math.random()*libros.length)];
+    render();
+  }catch(e){alert("No se pudo cargar Triggui.");console.error(e);}
 })();
 
-/* gradiente por bloque */
+/* helpers */
 const grad=i=>`linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
+const isURL=s=>/^https?:\/\//i.test(s||"");
 
-/* portada builder */
-function buildPort(i){
-  const d=document.createElement("div");d.className="portada";
+/* portada node */
+function makePort(i){
+  const d=document.createElement('div');d.className='portada';
   d.innerHTML=`<div class="emoji">${emojis[i%emojis.length]}</div>
                <h2 class="title">${libro.titulo}</h2>
                <p class="author">${libro.autor}</p>`;
+  if(isURL(libro.portada)){             /* si hubiera imagen real */
+    const img=new Image();img.src=libro.portada;img.loading="lazy";img.style.maxWidth="78%";
+    d.insertBefore(img,d.children[1]);
+  }
   return d;
 }
 
-/* render 4 bloques */
+/* render 4 cards */
 function render(){
-  const grid=$('#grid');grid.innerHTML='';
+  grid.innerHTML='';
   for(let i=0;i<4;i++){
     const card=document.createElement('div');card.className='block';card.style.background=grad(i);
     const label=document.createElement('div');label.className='label';label.textContent=`${emojis[i]} ${libro.palabras[i]}`;
     const frase=document.createElement('div');frase.className='frase';frase.textContent=libro.frases[i];
-    const port=buildPort(i);
-    if(i===portIdx)card.append(port);
+    const port=makePort(i);
+    if(i===portIdx) card.append(port);
     card.append(label,frase);
-    card.onclick=()=>{if(!revealed){card.classList.add('show');port.style.display='flex';revealed=true;}};
+    card.onclick=()=>handle(card,i,port,label);
     grid.append(card);
   }
 }
+
+/* click logic */
+function handle(card,i,port,label){
+  if(revealed && i!==portIdx){location.reload();return;}
+  if(i===portIdx && !revealed){
+    label.style.display='none';port.style.display='flex';
+    card.classList.add('reveal');card.style.setProperty('--aura',libro.colores[i]);
+    [...grid.children].forEach((c,j)=>{if(j!==portIdx)c.classList.add('show');});
+    cta.style.display='flex';revealed=true;
+  }else if(i!==portIdx && !revealed){
+    card.classList.toggle('show');
+  }
+}
+
+/* CTA buttons */
+btnNew.onclick=()=>location.reload();
+btnPhy.onclick=async()=>{
+  btnPhy.disabled=true;cele.style.display='flex';
+  celeMsg.innerHTML='✨ <span class="num">...</span><br>libros físicos abiertos';
+  try{
+    const {total}=await fetch("https://triggui-api.vercel.app/api/increment").then(r=>r.json());
+    celeMsg.innerHTML=`✨ <span class="num">${total.toLocaleString('es-MX')}</span><br>libros físicos abiertos`;
+  }catch{celeMsg.textContent="📚 Error al contar libros";}
+  setTimeout(()=>{cele.style.display='none';cta.style.display='flex';btnPhy.disabled=false;},2300);
+};
 </script>
 </body>
 </html>
